Add further Bootstrap styles to index.html
Coauthored by Maria Lagunero <maria58@gmail.com>

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <p>
        I've almost finished my first week at Epicodus. Here are some of the things I've learned so far:
       </p>
+      <div class="well">
       <h2>Command Line</h2>
       <ul> 
         <li>Navigating my documents through the command line.</li>
@@ -18,7 +19,12 @@
         <li>Moving and deleting files and folders through the command line.</li>
         <li>Retrieving my current location from the command line.</li>
       </ul>
-      <h2>Git and GitHub</h2>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+      <h2 class="panel-title">Git and GitHub</h2>
+        </div>
+        <div class="panel-body">
       <ul>
         <li class="bg-success">Initializing local Git repository, and create remote GitHub repositories.</li>
         <li>Tracking and committing changes with Git.</li>
@@ -28,6 +34,8 @@
         <li>Cloning down a project from GitHub to my local machine.</li>
         <li>Publishing a website on GitHub pages.</li>
       </ul>
+      </div>
+      </div>
       <h2>HTML</h2>
       <ul>
         <li class="bg-success">Using HTML tags to create websites.</li>
